--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,12 @@ body {
 header {
     background-color: #333;
     color: #fff;
-    padding: 20px 40px;
+    padding: 20px;
     text-align: center;
 }
 
-header h1, header h2, footer h2{
-    color:#f0f0f0;
+header h1, header h2, footer h2 {
+    color: #f0f0f0;
 }
 
 nav {
@@ -72,7 +72,7 @@ p {
     margin-bottom: 12px;
 }
 
-main p{
+main p {
     text-align: justify;
 }
 
@@ -89,7 +89,6 @@ footer {
     color: #fff;
     text-align: center;
     padding: 20px 0;
-    bottom: 0;
     width: 100%;
 }
 
@@ -100,10 +99,42 @@ footer p a {
 
 #contact {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
 }
 
 #contact p {
     margin: 0;
+}
+
+@media screen and (max-width: 768px) {
+    header {
+        padding: 10px;
+    }
+
+    header h1 {
+        font-size: 1.5em;
+    }
+
+    header h2 {
+        font-size: 1.2em;
+    }
+
+    nav ul li {
+        margin-left: 10px;
+    }
+
+    section {
+        margin: 10px;
+        padding: 10px;
+    }
+
+    footer {
+        padding: 10px 0;
+    }
+
+    #contact {
+        flex-direction: column;
+    }
 }
