--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,13 @@ body {
 header {
     background-color: #333;
     color: #fff;
-    padding: 20px;
+    padding: 20px 40px;
     text-align: center;
 }
 
-header h1, header h2, footer h2 {
+header h1,
+header h2,
+footer h2 {
     color: #f0f0f0;
 }
 
@@ -49,7 +51,9 @@ nav ul li a {
     padding: 20px;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     color: #444;
 }
 
@@ -89,6 +93,7 @@ footer {
     color: #fff;
     text-align: center;
     padding: 20px 0;
+    bottom: 0;
     width: 100%;
 }
 
@@ -99,7 +104,6 @@ footer p a {
 
 #contact {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
 }
@@ -108,33 +112,43 @@ footer p a {
     margin: 0;
 }
 
-@media screen and (max-width: 768px) {
+/* Estilos para hacer la web responsive */
+@media (max-width: 768px) {
     header {
-        padding: 10px;
+        padding: 20px;
     }
 
-    header h1 {
-        font-size: 1.5em;
-    }
-
-    header h2 {
-        font-size: 1.2em;
-    }
-
-    nav ul li {
-        margin-left: 10px;
-    }
-
-    section {
+    main section {
         margin: 10px;
         padding: 10px;
     }
 
-    footer {
-        padding: 10px 0;
-    }
-
     #contact {
         flex-direction: column;
+        align-items: center;
+    }
+
+    #navigation {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    #skills {
+        display: grid;
+        gap: 10px;
+    }
+
+    #skills > div {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        align-items: center;
+    }
+
+    #skills > div span {
+        margin-left: 10px;
+    }
+
+    #skills > div div {
+        height: 5px;
     }
 }
