--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #00CC00;
+    color: #28a745;
     text-decoration: none;
 }
 
@@ -98,7 +98,7 @@ footer {
 }
 
 footer p a {
-    color: #00CC00;
+    color: #28a745;
     text-decoration: none;
 }
 
