--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,38 @@ footer p a {
     margin: 0;
 }
 
+/* Estilos para el círculo giratorio */
+.spinner {
+  width: 30vh; /* Ancho del círculo en el 30% de la altura de la pantalla */
+  height: 30vh; /* Altura del círculo en el 30% de la altura de la pantalla */
+  border: 15vh 15vh solid #f3f3f3; /* Grosor del borde del círculo */
+  border-top: 2vh solid #ff0000; /* Grosor del borde superior del círculo */
+  border-radius: 50%;
+  animation: spin .9s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* Estilos para la ventana de carga */
+#loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+
+
 /* Estilos para hacer la web responsive */
 @media (max-width: 768px) {
     header {
