--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,25 @@ footer p a {
   z-index: 9999;
 }
 
+#toTopBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: #333; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 0; /* No rounded corners for a rectangular button */
+    font-size: 18px; /* Increase font size */
+}
+
+#toTopBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+}
 
 
 /* Estilos para hacer la web responsive */
